--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
-.titulo {
-    color: hotpink;
-    width: 310px;
-    height: 50px;
-    background-color: teal;
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
+
+body {
+    font-family: "Luckiest Guy", cursive;
+    font-weight: 400;
+    font-style: normal;
+    background-color:bisque;
 }
 
 #seleccionar-mascota {
@@ -10,4 +12,39 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.titulo {
+    color: rgb(255, 222, 74);
+    font-size: 100px;
+}
+
+.subtitulo {
+    font-size: 40px;
+}
+
+.tarjetas{
+    display: flex;
+    gap: 10px;
+}
+
+.tarjeta-de-mokepon {
+    width: 190px;
+    height: 100px;
+    background: rgb(75, 171, 201);
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: azure;
+}
+
+.tarjeta-de-mokepon img {
+    width: 80px;
+}
+
+input {
+    display: none;
 }
